public/resources/css/style.css
:root{
    --primary_font: 'Montserrat Alternates';
    --secondary_font: 'Montserrat';

    --black_color: black;
    --primary_color: rgb(236, 46, 46);
    --gray_color: grey;
    --white_color: white;

    --card_color: #F8F9FA;
}
.link_hover{
    transition: 0.2s all ease-in-out;
}
.link_hover:hover{
    transition: 0.2s all ease-in-out;
    font-weight: 600;
}
.primary_button{
    border: none;
    outline: none;
    background-color: var(--primary_color);
    padding: 2vh 2vw;
    text-align: left;
}
.secondary_button{
    background-color: var(--black_color);
}

.rider_reg{
    background-color: var(--card_color);
    padding: 5vh 2vw;
    border-radius: 1vw;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.input_field{
    width: 100%;
    height: 4vh;
    background-color: var(--white_color);
    border-radius: 0.2vw;
    border: none;
    outline: none;
    padding: 0 1vw;
}
.file_field{
    padding: 0.5vh 0;
    background: none;

}

